--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,10 @@ body {
   font-family: 'Orbitron';
 }
 
+.title.is-silkscreen {
+  font-family: 'Silkscreen';
+}
+
 // #main.hero {
 //   &.is-primary {
 //     background-color: $hero-primary;
