--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,10 @@
-@import './variables.scss';
 @import './../../node_modules/bulma/bulma.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Silkscreen:wght@400;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 :root {
   --bulma-primary-h: 121deg;
+  --dark-primary: #14570d;
 }
 
 body, html, #root {
@@ -22,161 +22,3 @@ body {
 .title.is-silkscreen {
   font-family: 'Silkscreen';
 }
-
-// #main.hero {
-//   &.is-primary {
-//     background-color: $hero-primary;
-
-//     @media only screen and (max-width: $tablet) {
-//       background-color: $primary-700;
-//     }
-
-//     .navbar .nav-item:not(.button) {
-//       color: $primary !important;
-//     }
-//   }
-
-//   .columns {
-//     .column {
-//       display: flex;
-//       justify-content: center;
-//     }
-//   }
-
-//   position: relative;
-// }
-
-// .section {
-//   &.is-primary-900 {
-//     background: $primary-900;
-
-//     .title {
-//       color: $white;
-//     }
-//   }
-
-//   &.is-primary-100 {
-//     background: $primary-100;
-//   }
-
-//   &#business {
-//     padding-top: 10em;
-
-//   }
-//   &#about-me {
-//     padding-bottom: 10em;
-//   }
-// }
-
-// .button {
-//   &.is-primary {
-//     &:hover {
-//       background: $primary-700;
-//     }
-//   }
-// }
-
-// .mini-links {
-//   display: flex;
-//   flex-direction: row;
-//   flex-wrap: wrap;
-
-//   li {
-//     padding: .5em;
-//     text-align: center;
-//   }
-// }
-
-// #about-me {
-//   position: relative;
-// }
-
-// .is-rainbow-text {
-//   animation: rainbowText 5s infinite;
-// }
-
-// .has-rainbow-background {
-//   animation: rainbowBackground 5s infinite;
-// }
-
-// .columns {
-//   .column {
-//     &.has-text-right {
-//       @media only screen and (max-width: $tablet) {
-//         text-align: left !important;
-//       }
-//     }
-//   }
-// }
-
-// @keyframes rainbowText {
-//   0% {
-//     color: $rainbowRed;
-//   }
-//   15% {
-//     color: $rainbowOrange;
-//   }
-//   30% {
-//     color: $rainbowYellow;
-//   }
-//   45% {
-//     color: $rainbowGreen;
-//   }
-//   60% {
-//     color: $rainbowBlue;
-//   }
-//   75% {
-//     color: $rainbowViolet;
-//   }
-//   100% {
-//     color: $rainbowRed;
-//   }
-// }
-
-// @keyframes rainbowBackground {
-//   0% {
-//     background: $rainbowRed;
-//     border-color: $rainbowRed;
-//   }
-//   14% {
-//     background: $rainbowOrange;
-//     border-color: $rainbowOrange;
-//   }
-//   32% {
-//     background: $rainbowYellow;
-//     border-color: $rainbowYellow;
-//   }
-//   46% {
-//     background: $rainbowGreen;
-//     border-color: $rainbowGreen;
-//   }
-//   72% {
-//     background: $rainbowBlue;
-//     border-color: $rainbowBlue;
-//   }
-//   85% {
-//     background: $rainbowViolet;
-//     border-color: $rainbowViolet;
-//   }
-//   100% {
-//     background: $rainbowRed;
-//     border-color: $rainbowRed;
-//   }
-// }
-
-// .star-container {
-//   display: flex;
-//   flex-direction: row;
-//   margin-bottom: 1em;
-//   margin-top: -.75em;
-//   align-items: center;
-
-//   small {
-//     font-size: .8em;
-//   }
-// }
-
-// .stars {
-//   color: $gold;
-//   margin-right: .25em;
-// }
