--- a/src/components/old-terminal/old-terminal.scss
+++ b/src/components/old-terminal/old-terminal.scss
@@ -2,6 +2,8 @@
   width: 100%;
   height: 100%;
   position: relative;
+  z-index: 100;
+  box-shadow: 0px .5rem 1rem 1rem rgba(0,0,0,.5);
 
   font-family: "Silkscreen", sans-serif;
   font-weight: 400;
