--- a/src/components/cv/time-machine.scss
+++ b/src/components/cv/time-machine.scss
@@ -1,7 +1,7 @@
 @use "bulma/sass/utilities/mixins";
 
 .hero.is-timemachine {
-    background-image: linear-gradient(180deg, var(--dark-primary), var(--bulma-info));
+    background-image: linear-gradient(180deg, var(--bulma-primary-10), var(--bulma-info));
 }
 
 .time-machine {
@@ -38,14 +38,20 @@
 
       .subtitle {
         font-family: "Silkscreen";
+        color: var(--bulma-primary-30);
+
         @include mixins.tablet {
           font-size: 1.2vw;
         }
       }
 
+      .title {
+        color: var(--bulma-info-40);
+      }
+
       small {
         font-style: italic;
-        color: black;
+        // color: black;
         font-size: .8rem;
       }
     }
