--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Silkscreen:wght@400;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 :root {
-  --bulma-primary-h: 121deg;
+  --bulma-primary-h: 121deg; //#00d1b2
   // --dark-primary: #14570d;
 }
 
