--- a/src/components/old-terminal/old-terminal.scss
+++ b/src/components/old-terminal/old-terminal.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   position: relative;
-  z-index: 100;
+  z-index: 10;
   box-shadow: 0px .5rem 1rem 1rem rgba(0,0,0,.5);
 
   font-family: "Silkscreen", sans-serif;
@@ -107,6 +107,15 @@
     }
   }
 }
+
+#dosbox {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.dosbox-container { width: 320px; height: 200px; }
+.dosbox-container > .dosbox-overlay { background: url(https://js-dos.com/cdn/DOOM.png); }
 
 @keyframes blinker {
   49% {
