--- a/src/components/quiz/quiz.scss
+++ b/src/components/quiz/quiz.scss
@@ -1,7 +1,15 @@
+@use "bulma/sass/utilities/mixins";
+
 .quiz {
   .radio {
     font-weight: bold;
     font-size: 1.5rem;
     accent-color: var(--bulma-primary);
+  }
+
+  .question-container {
+    @include mixins.tablet {
+      width: 50vw;
+    }
   }
 }
