--- a/src/components/cv/time-machine.scss
+++ b/src/components/cv/time-machine.scss
@@ -40,6 +40,7 @@
       margin-bottom: 4rem;
       border-radius: 1rem;
       box-shadow: 0px 0px 5px 5px rgba(0,0,0,.018);
+      color: rgb(0,0,0);
 
       @include mixins.mobile {
         padding: .4rem .2rem;
@@ -108,6 +109,12 @@
     }
   }
 
+  .work-experience-years.card {
+    display: none;
+    justify-content: center;
+    align-items: center;
+  }
+
   @include mixins.mobile {
     .card-stack {
       display: flex;
@@ -127,6 +134,10 @@
         margin: 0rem 1rem;
         padding: 1rem;
         width: calc(100vw - 2rem);
+
+        &.work-experience-years {
+          display: flex;
+        }
 
         &:last-child {
           padding-bottom: 0;
