feat: putting together role models section

--- a/src/components/cv/time-machine.scss
+++ b/src/components/cv/time-machine.scss
@@ -58,7 +58,7 @@
         }
       }
 
-      &:last-child {
+      &:nth-last-child(2) {
         margin-bottom: 0;
         padding-bottom: 20rem;
       }
