--- a/src/components/achievements/achievements.scss
+++ b/src/components/achievements/achievements.scss
@@ -14,6 +14,8 @@
 
   .achievement {
     animation: slideIntro 5s;
+    display: flex;
+    color: white;
 
     .description {
       text-overflow: ellipsis;
