--- a/src/components/achievements/achievements.scss
+++ b/src/components/achievements/achievements.scss
@@ -54,7 +54,7 @@
     line-height: .8rem;
   }
 
-  .achievement-throphy {
+  .achievement-trophy {
     background: mix(black, #00FF00);
     font-size: 1.5rem;
     min-width: 3rem;
