--- a/src/components/game-monitor/pokemon-battle/pokemon-battle.scss
+++ b/src/components/game-monitor/pokemon-battle/pokemon-battle.scss
@@ -86,8 +86,8 @@
       position: absolute;
       bottom: 1rem;
       left: 1rem;
-      width: 120px;
-      height: 120px;
+      width: 15vw;
+      height: 15vw;
       display: flex;
       align-items: center;
       justify-content: center;
