--- a/src/components/game-monitor/rick-overlay.scss
+++ b/src/components/game-monitor/rick-overlay.scss
@@ -16,6 +16,7 @@
     z-index: 2;
 
     pre {
+      background: none;
       font-family: "Courier New", monospace;
       font-size: 0.5rem;
       line-height: 1;
