--- a/src/components/game-monitor/pokemon-battle/pokemon-battle.scss
+++ b/src/components/game-monitor/pokemon-battle/pokemon-battle.scss
@@ -83,9 +83,9 @@
 
     .player-sprite {
       position: absolute;
-      bottom: 1rem;
+      bottom: 0rem;
       left: 1rem;
-      width: 15vw;
+      // width: 15vw;
       height: 15vw;
       display: flex;
       align-items: center;
@@ -351,7 +351,7 @@
     transform: translateX(0);
   }
   50% {
-    transform: translateX(20px) scale(1.1);
+    transform: translateX(2rem);
   }
 }
 
