feat: added matrix sounds and converted monitor to webp

--- a/src/components/game-monitor/level-selection.scss
+++ b/src/components/game-monitor/level-selection.scss
@@ -35,6 +35,11 @@
       font-family: "Silkscreen", sans-serif;
       font-weight: bold;
 
+      &.disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
+
       &:hover,
       &.selected {
         background: var(--bulma-primary);
