feat: initial dvd and resolved quiz questions

--- a/src/components/blockbuster/blockbuster.scss
+++ b/src/components/blockbuster/blockbuster.scss
@@ -5,6 +5,15 @@ $blockbuster-color: #ffaa01;
   color: $blockbuster-color;
   padding-top: 4rem;
 
+  .link {
+    color: white;
+    text-decoration: underline;
+
+    &:hover {
+      color: $blockbuster-color;
+    }
+  }
+
   .blockbuster-titles {
     display: flex;
     flex-direction: row;
@@ -92,17 +101,17 @@ $blockbuster-color: #ffaa01;
   .block-grid {
     display: grid;
 
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
     margin-top: .5rem;
     margin-bottom: 4rem;
 
     @media screen and (min-width: 769px) {
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(4, 1fr);
     }
 
     @media screen and (min-width: 1024px) {
-      grid-template-columns: repeat(5, 1fr);
+      grid-template-columns: repeat(6, 1fr);
       gap: 1.5rem;
     }
 
