--- a/src/components/blockbuster/blockbuster.scss
+++ b/src/components/blockbuster/blockbuster.scss
@@ -76,11 +76,27 @@ $blockbuster-color: #ffaa01;
     margin-top: 2rem;
     margin-bottom: .25rem;
 
+    @media screen and (max-width: 768px) {
+      font-size: 1rem;
+    }
+
+    @media screen and (min-width: 769px) and (max-width: 1024px) {
+      font-size: 1.5rem;
+    }
+
     &.late-fees {
       color: white;
       font-family: 'impact';
       font-size: 5rem;
       line-height: .85;
+
+      @media screen and (max-width: 768px) {
+        font-size: 2.5rem;
+      }
+
+      @media screen and (min-width: 769px) and (max-width: 1024px) {
+        font-size: 3.75rem;
+      }
     }
   }
 
