--- a/src/components/role-models/styles.scss
+++ b/src/components/role-models/styles.scss
@@ -184,11 +184,12 @@
       width: calc((100vw / 3) - 3.3rem);
 
       @media only screen and (max-width: 750px) {
-        width: calc(100vw - 3.3rem);
+        width: 100%;
       }
 
       @media only screen and (min-width: 751px) and (max-width: 1032px) {
         width: calc((100vw / 2) - 3.3rem);
+        color: red !important;
       }
 
       &:first-child {
